kubernetes/minikube/loki-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-np
  labels:
    managed-by: setup-cluster.sh
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: promtail
      ports:
        - port: 3100
